Fix ticker tape alignment

--- a/src/landing/components/Ticker/Ticker.less
+++ b/src/landing/components/Ticker/Ticker.less
@@ -15,6 +15,7 @@
     line-height: 16px;
     margin: auto;
     pointer-events: none;
+    align-items: center;
   }
 
   .Ticker__market {
